# ESP32-Secure-OTA-BLE-Project

./: .gitignore  README.md
ESP32_RGB_LED/: settings.gradle.kts
ESP32_RGB_LED/app/: build.gradle.kts
ESP32_RGB_LED/app/src/androidTest/java/com/example/esp32_rgb_led/: ExampleInstrumentedTest.kt
ESP32_RGB_LED/app/src/main/: AndroidManifest.xml
ESP32_RGB_LED/app/src/main/java/com/example/esp32_rgb_led/: BleManager.kt  MainActivity.kt
ESP32_RGB_LED/app/src/main/java/com/example/esp32_rgb_led/ui/theme/: Color.kt  Theme.kt  Type.kt
ESP32_RGB_LED/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
ESP32_RGB_LED/app/src/test/java/com/example/esp32_rgb_led/: ExampleUnitTest.kt
ESP32_RGB_LED/gradle/wrapper/: gradle-wrapper.properties
OTA_server/: firmware_server.py
firmware/: CMakeLists.txt  partitions.csv
firmware/main/: CMakeLists.txt  idf_component.yml  main.c  main.h
